--- a/css/theme.css
+++ b/css/theme.css
@@ -109,10 +109,10 @@ em {
 	transition: color 0.5s ease-in-out;
 }
 
-@media(max-width:768px) {
+@media(min-width:768px) {
 	p {
 		margin: 0 0 35px;
-		font-size: 21px;
+		font-size: 27px;
 		line-height: 1.6;
 	}
 }
